Merging in SimpleAST changes from FastTree branch